<resources>
    <string name="app_name">Encore</string>
    <string name="title_activity_login">Encore</string>
    <string name="title_activity_main_lobby">Main Lobby</string>
    <string name="title_activity_findorcreatelobby">findorcreatelobby</string>
    <string name="private_lobby_toggle">View private lobbies</string>
    <string name="create_new_lobby">Create new lobby</string>
    <string name="email">Email Address</string>
    <string name="pass">Password</string>
    <string name="login">Log In</string>
    <string name="loginrdio">Log In with Rdio</string>
    <string name="title_activity_settings">Settings</string>
    <string name="name_hint">i.e. My Lobby</string>
    <string name="gen">GENERAL</string>
    <string name="lobby_name">Lobby name:</string>
    <string name="private_lobby">Make lobby private?</string>
    <string name="max_members">Maximum members:</string>
    <string name="zero">0 = no limit</string>
    <string name="privacy">PRIVACY</string>
    <string name="music_source">Music source:</string>
    <string name="Rdio">Rdio</string>
    <string name="mobile_source">Mobile</string>
    <string name="show_private_lobbies">Show private lobbies?</string>
    <string name="finish">Finish</string>
    <string name='createlobby'>Create Lobby</string>
    <string name='rdio_login'>Log in with Rdio</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_lobby_settings">LobbySettings</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="title_activity_now_playing">Now Playing</string>
</resources>
