<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_lobby_settings"
    tools:context="cs130project.encore.LobbySettings"
    android:background="#FFCCCCCC">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/gen"
        android:id="@+id/generalheader"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/generalheader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFFFF"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lobby_name"
                android:id="@+id/lobbyname"
                android:textAlignment="center"
                android:textColor="#FF000000"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/lobbynamefill"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:layout_marginRight="5dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:layout_gravity="right"
                android:gravity="center_vertical|right"
                android:inputType="textShortMessage" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFFFF"
            android:layout_marginTop="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/max_members"
                android:id="@+id/maxmembers"
                android:textAlignment="center"
                android:textColor="#FF000000"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/maxmembersfill"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:layout_marginRight="5dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:layout_gravity="right"
                android:gravity="center_vertical|right"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFFFF"
            android:layout_marginTop="1dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/music_source"
                android:id="@+id/textView4"
                android:textAlignment="center"
                android:textColor="#FF000000"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp" />

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Rdio"
                    android:id="@+id/radioButton"
                    android:layout_marginLeft="90dp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/mobile_source"
                    android:id="@+id/radioButton2" />
            </RadioGroup>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/privacy"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="20dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/generalheader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:weightSum="1" >

        <Switch
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/private_lobby"
            android:id="@+id/switch2"
            android:layout_weight="0"
            android:background="#FFFFFFFF"
            android:layout_marginTop="1dp"
            android:paddingLeft="5dp" />
    </LinearLayout>

</RelativeLayout>
