<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login" tools:context="cs130project.encore.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/encorebgnoline"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/userpass"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="200dp">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/Email"
                android:hint="@string/email"
                android:gravity="left|center"
                android:background="#DDD8D8D8"
                android:backgroundTint="#AAD8D8D8"
                android:backgroundTintMode="screen"
                android:paddingLeft="5dp"
                android:textStyle="italic"
                android:typeface="monospace"
                android:layout_marginBottom="5dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/Password"
                android:hint="@string/pass"
                android:gravity="left|center"
                android:background="#DDD8D8D8"
                android:backgroundTint="#AAD8D8D8"
                android:backgroundTintMode="screen"
                android:paddingLeft="5dp"
                android:password="true"
                android:textStyle="italic"
                android:layout_marginBottom="15dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/login"
                android:onClick="enterLobby"
                android:textSize="20sp"
                android:background="#FFD8D8D8"
                android:layout_marginBottom="50dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginrdio"
                android:id="@+id/rdiologin"
                android:onClick="enterLobby"
                android:textSize="20sp"
                android:background="#FF000000"
                android:textColor="#FFFFFFFF" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
